tab fixed on mobile view

--- a/app/styles/style.default.css
+++ b/app/styles/style.default.css
@@ -138,7 +138,7 @@ a:focus {
 }
 
 .promote li:nth-child(even) {
-    width:160px;
+    width:155px;
 }
 
 .overlay-wrapper {
